logs/products.atgooglemaps.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Products'...
Listing './lib/python3.5/site-packages/Products/ATGoogleMaps'...
Listing './lib/python3.5/site-packages/Products/ATGoogleMaps/browser'...
Listing './lib/python3.5/site-packages/Products/ATGoogleMaps/content'...
Listing './lib/python3.5/site-packages/Products/ATGoogleMaps/i18n'...
Listing './lib/python3.5/site-packages/Products/ATGoogleMaps/interfaces'...
Listing './lib/python3.5/site-packages/Products/ATGoogleMaps/locales'...
Listing './lib/python3.5/site-packages/Products/ATGoogleMaps/locales/ja'...
Listing './lib/python3.5/site-packages/Products/ATGoogleMaps/locales/ja/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/Products/ATGoogleMaps/portlets'...
Listing './lib/python3.5/site-packages/Products/ATGoogleMaps/profiles'...
Listing './lib/python3.5/site-packages/Products/ATGoogleMaps/profiles/default'...
Listing './lib/python3.5/site-packages/Products/ATGoogleMaps/profiles/default/types'...
Listing './lib/python3.5/site-packages/Products/ATGoogleMaps/skins'...
Listing './lib/python3.5/site-packages/Products/ATGoogleMaps/skins/ATGoogleMaps'...
Compiling './lib/python3.5/site-packages/Products/ATGoogleMaps/skins/ATGoogleMaps/gmap.py'...
***   File "./lib/python3.5/site-packages/Products/ATGoogleMaps/skins/ATGoogleMaps/gmap.py", line 46
    return "\n".join(js)
                       ^
SyntaxError: 'return' outside function

Compiling './lib/python3.5/site-packages/Products/ATGoogleMaps/skins/ATGoogleMaps/gpolyline.py'...
***   File "./lib/python3.5/site-packages/Products/ATGoogleMaps/skins/ATGoogleMaps/gpolyline.py", line 25
    return "\n".join(js)
                       ^
SyntaxError: 'return' outside function

Compiling './lib/python3.5/site-packages/Products/ATGoogleMaps/skins/ATGoogleMaps/migrate_latlng_field.py'...
***   File "./lib/python3.5/site-packages/Products/ATGoogleMaps/skins/ATGoogleMaps/migrate_latlng_field.py", line 3
    print "Migrate Float field to Latlng filed"
                                              ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/Products/ATGoogleMaps/tests'...
Compiling './lib/python3.5/site-packages/Products/ATGoogleMaps/tests/test_content.py'...
***   File "./lib/python3.5/site-packages/Products/ATGoogleMaps/tests/test_content.py", line 62
    print allow_content_types
                            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/Products/ATGoogleMaps/tests/test_setup.py'...
***   File "./lib/python3.5/site-packages/Products/ATGoogleMaps/tests/test_setup.py", line 21
    print '\n'.join(p['id'] for p in qi.listInstallableProducts())
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/Products.ATGoogleMaps-0.7.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
